--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,6 @@
 {% extends 'base.html.twig' %}
+{# {% form_theme formProject 'bootstrap_4_layout.html.twig' %} #}
+
 {% block body %}
 	<h1>Connexion</h1>
     <form action="{{ path('security_login') }}" method="post">
